correct overflow text and background image scale

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ header {
   left: 0;
   z-index: -1;
   width: 100%;
-  height: 19%;
+  height: 200px;
 }
 
 
