--- a/src/components/TodoItemList.css
+++ b/src/components/TodoItemList.css
@@ -3,7 +3,6 @@
 .frameListLight {
   width: 90%;
   height: auto;
-  overflow: hidden;
 
   border-radius: 5px;
   margin-bottom: 10px;
